--- a/資訊安全技術.md
+++ b/資訊安全技術.md
@@ -1,4 +1,4 @@
-#防火牆
+## 防火牆
 ```
 主機型防火牆
 此防火牆需有兩張網路卡，一張與網際網路連接，另一張與內部網路連接，如此網際網路與內部網路的通道無法直接接通，所有封包都需要透過主機傳送。
@@ -16,4 +16,4 @@
 此防火牆藉由多台主機與兩個路由器組成，電腦分成兩個區塊，屏障子網域與內部網路，封包經由以下路徑，第一個路由器->屏障子網域->第二路由器->內部網路，此設計因有階段式的過濾功能，因此兩個路由器可以有不同的過濾規則，讓網路封包更有效率。若一封包通過第一過濾器封包，會先在屏障子網域進行服務處理，若要進行更深入內部網路的服務，則要通過第二路由器過濾。
 ```
 
-#HTTrack
+## HTTrack
